# plc-visualizer

./: .gitignore  README.md  pyproject.toml
src/plc_visualizer/: app.py  database.py  init_db.py
src/plc_visualizer/models/: readings.py
src/plc_visualizer/templates/: history.html  index.html
